--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,11 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Frontend for the web app",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "react-scripts build"
+    "start": "echo 'No build script required for HTML frontend.'"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.8.4",
-    "react-scripts": "^4.0.3"
-  }
+  "license": "ISC"
 }
