Fix: add build script for static frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "echo 'No build script required for HTML frontend.'"
+    "build": "echo 'No build process for a static HTML page' && exit 0"
   },
   "author": "",
   "license": "ISC"
