Fix: update API URL to point to the Render backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "description": "Frontend for the web app",
   "main": "index.html",
   "scripts": {
-    "start": "echo 'No build script required for HTML frontend.'",
-    "build": "echo 'No build process for a static HTML page' && exit 0"
+    "start": "http-server . -p 1000"
+    
   },
   "author": "",
   "license": "ISC"
